<resources>
    <string name="app_name">Agenda CUCSH Belenes</string>

    <string name="label_edificio1">Edificio A</string>
    <string name="label_edificio2">Edificio B</string>
    <string name="label_edificio3">Edificio C</string>
    <string name="label_edificio4">Edificio D</string>
    <string name="label_edificio5">Edificio F</string>

    <string name="label_nombre_sede">Sede Belenes</string>
    <string name="label_cucsh">Centro Universitario de Ciencias Sociales y Humanidades</string>

    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="lunes">lun.</string>
    <string name="martes">mar.</string>
    <string name="miercoles">mié.</string>
    <string name="jueves">jue.</string>
    <string name="viernes">vie.</string>
    <string name="sabado">sáb.</string>
    <string name="domingo">dom.</string>

    <string name="action_settings">Settings</string>
    <string name="aviso_datos">Para no consumir datos, la actualización de la base de datos es manual mientras no estes conectado a una red WIFI.</string>
    <string name="aviso_conexion">Hay un problema con la conexión a la base de datos. Verifica tu conexión a internet.</string>

    <string name="label_cerrar">Cerrar</string>
    <string name="label_borrar_evento">Borrar evento</string>
    <string name="label_auditorio">Edificio y aula:</string>
    <string name="label_tipo_de_evento">Tipo de evento:</string>
    <string name="label_horario_del_evento">Horario del evento:</string>
    <string name="label_fecha_del_evento">Fecha del evento:</string>
    <string name="label_nombre_del_organizador">Nombre del organizador:</string>
    <string name="label_numero_tel">Numero telefónico</string>
    <string name="label_nota">Nota:</string>
    <string name="label_id">ID del evento:</string>
    <string name="label_editar_evento">Editar evento</string>
    <string name="label_hora_inicial">Hora inicial:</string>
    <string name="label_hora_final">Hora final</string>
    <string name="label_tipo_de_evento2">Tipo de evento</string>

    <string name="contrase_a">Contraseña:</string>
    <string name="auditorio">Auditorios</string>

    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">GUARDAR</string>


    <string name="cerrar">cerrar</string>
    <string name="titulo_evento">Título del evento…</string>
    <string name="label_titulo_del_evento">Titulo del evento:</string>
    <string name="tipo_de_actividad">Tipo de actividad</string>
    <string name="label_nombre_del_organizador2">Nombre del organizador</string>
    <string name="label_contrasena2">Contraseña</string>
    <string name="label_numero_telefonico2">Número telefónico</string>
    <string name="label_contrasena">Contraseña:</string>
    <string name="label_nota_cta">Nota para CTA</string>

    <string name="transition_date_dialog_helzio" translatable="false">transition_date_dialog_helzio</string>
    <string name="cargado_datos">Cargado datos…</string>
    <string name="st_aplicando_cambios">Aplicando cambios…</string>
    <string name="st1">Presiona aquí para ver la información de ese evento.</string>
    <string name="st2">Modifica uno de los dos horarios.</string>
    <string name="st3">Modifica la hora de inicio del evento para continuar.</string>
    <string name="st4">Modifica la hora de inicio del evento para continuar.</string>
    <string name="marcar_no_se_present">\"No se presentó\"</string>
    <string name="prefs_name">PREFERENCIAS_AGENDA_CUCSH_BELENES</string>
    <string name="prefs_update">UPDATE</string>
    <string name="url_update">http://148.202.6.72/aplicacion/update_belenes.txt</string>
    <string name="url_datos">http://148.202.6.72/aplicacion/datos_belenes.txt</string>
    <string name="prefs_st_eventos_guardados">EVENTOS GUARDADOS</string>
    <string name="prefs_lista_eventos">LISTA_EVENTOS</string>
    <string name="prefs_titulos">TITULOS</string>
    <string name="prefs_tipos_evento">TIPOS_EVENTOS</string>
    <string name="prefs_nombres_organizador">NOMBRES_ORGANIZADOR</string>
    <string name="prefs_id_prox">ID_PROX</string>
    <string name="prefs_array_eventos">ARRAY_EVENTOS</string>
    <string name="openDrawer">Abiert</string>
    <string name="closeDrawer">cerrado</string>
    <string name="problema_conexion">Hay un problema con la conexión a la base de datos. Verifica tu conexión a internet</string>
    <string name="actualizando">Actualizando información, por favor espere…</string>
    <string name="update_php">http://148.202.6.72/aplicacion/update_belenes.php</string>
    <string name="datos.php">http://148.202.6.72/aplicacion/datos_belenes.php</string>
    <string name="prefs_nombres_solicitante">NOMBRES_SOLICITANTE</string>
    <string name="prefs_nombres_responsables">NOMBRES_RESPONSABLES</string>
    <string name="prefs_nombres_dependencias">NOMBRES_DEPENDENCIAS</string>
    <string name="no_hay_coincidencias">No hay eventos que coincidan con la busqueda realizada.</string>
    <string name="no_hay_eventos">No hay eventos registrados este día.</string>
    <string name="fbb1">FBB 1</string>
    <string name="fbf1">FBF 1</string>
    <string name="selecciona_aula">Selecciona el aula del evento</string>
    <string name="edificio_a">Edificio A</string>
    <string name="edificio_b">Edificio B</string>
    <string name="edificio_c">Edificio C</string>
    <string name="edificio_d">Edificio D</string>
    <string name="edificio_f">Edificio F</string>
    <string name="reas_deportivas">Áreas deportivas</string>
    <string name="ver_clases">Ver clases</string>
    <string name="ver_eventos">Ver eventos</string>
    <string name="sellecionar_aula">Selecciona el aula del evento</string>
</resources>
